--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A midi parser and writer.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --check-leaks --bail"
+    "test": "mocha --check-leaks --bail",
+    "docs": "jsdoc -c ./jsdoc.config.json ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
     "url": "https://github.com/jokr/midi-node/issues"
   },
   "devDependencies": {
+    "ink-docstrap": "^1.3.0",
+    "jsdoc": "^3.4.3",
     "mocha": "^2.2.5"
   }
 }
